eks/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecapi-deployment
  labels:
    app: ecapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecapi
  template:
    metadata:
      labels:
        app: ecapi
    spec:
      containers:
      - name: ecapi
        image: ecapi:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
