eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecapi-service
spec:
  selector:
    app: ecapi-deployment

  ports:

    - protocol: TCP
      port: 80
      targetPort: 80
